# functional-stuff

./: pyproject.toml
examples/: deffered_results.ipynb  joins.ipynb
src/functional_stuff/monads/: __init__.py  base.py  enumerable.py  maybe.py  result.py
src/functional_stuff/utils/: protocols.py
