[project]
name = "functional-stuff"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "3k-dome", email = "doenerfresser3k@gmail.com" }]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
lint = ["pyright>=1.1.393", "ruff>=0.9.6"]
examples = ["ipykernel>=6.29.5"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D"]

[tool.ruff.lint.per-file-ignores]
"**/**.ipynb" = ["T201", "PIE790"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
include = ["src", "examples"]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
